[gd_scene load_steps=9 format=2]

[ext_resource path="res://utils/head.png" type="Texture" id=1]
[ext_resource path="res://scripts/TripScene.gd" type="Script" id=2]
[ext_resource path="res://environment/trippy_bg.png" type="Texture" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://environment/terry.png" type="Texture" id=5]
[ext_resource path="res://environment/elf.png" type="Texture" id=6]
[ext_resource path="res://shaders/background.shader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )

[node name="TripScene" type="TextureRect"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Sprite" parent="."]
position = Vector2( 629.04, 274.608 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="EyeLeft" type="ColorRect" parent="."]
margin_left = 516.831
margin_top = 179.0
margin_right = 580.831
margin_bottom = 214.0
color = Color( 0.960784, 1, 0.909804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EyeRight" type="ColorRect" parent="."]
margin_left = 677.0
margin_top = 179.0
margin_right = 741.0
margin_bottom = 214.0
color = Color( 0.960784, 1, 0.909804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EyeTimer" type="Timer" parent="."]
wait_time = 2.155
one_shot = true

[node name="EyeTween" type="Tween" parent="."]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Terry" type="Sprite" parent="."]
position = Vector2( 1036.31, 156.232 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 5 )

[node name="TerryTween" type="Tween" parent="Terry"]

[node name="Elf" type="Sprite" parent="."]
position = Vector2( 239.778, 207.266 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 6 )

[node name="ElfTween" type="Tween" parent="Elf"]
[connection signal="timeout" from="EyeTimer" to="." method="_on_EyeTimer_timeout"]
[connection signal="dialogFinished" from="HUD" to="." method="_on_HUD_dialogFinished"]
[connection signal="tween_completed" from="Terry/TerryTween" to="." method="_on_TerryTween_tween_completed"]
[connection signal="tween_completed" from="Elf/ElfTween" to="." method="_on_ElfTween_tween_completed"]
